# robotframework-PlatynUI

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: rust-ci.yml  test-package.yml
crates/platynui-spy-cli/: Cargo.toml
crates/platynui-spy-cli/src/: args.rs  attributes.rs  backend.rs  lib.rs  main.rs  model.rs  output.rs  xpath.rs
crates/platynui-spy-cli/src/backend/: win32.rs
crates/platynui-spy-cli/tests/: cli.rs
crates/platynui-spy-cli/tests/data/: sample_tree.json
crates/platynui-spy-core/: Cargo.toml
crates/platynui-spy-core/src/: attributes.rs  backend.rs  config.rs  filter.rs  lib.rs  xpath.rs
crates/platynui-spy-core/src/backend/: win32.rs
crates/platynui-spy-py/: Cargo.toml
crates/platynui-spy-py/src/: lib.rs
docs/: spy-cli-plan.md  spy_tool_plan.md
spy-cli/: Cargo.toml
spy-cli/src/: lib.rs  main.rs
spy-cli/tests/: cli.rs
spy-cli/tests/fixtures/: sample_tree.json
