[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "platynui-spy"
version = "0.1.0"
description = "Rust-based desktop UI automation spy CLI and Python bindings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "PlatynUI Contributors" }
]
keywords = ["ui automation", "spy", "accessibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: User Interfaces"
]

[project.urls]
Homepage = "https://github.com/manykarim/robotframework-PlatynUI"
Source = "https://github.com/manykarim/robotframework-PlatynUI"
Issues = "https://github.com/manykarim/robotframework-PlatynUI/issues"

[tool.maturin]
manifest-path = "crates/platynui-spy-py/Cargo.toml"

