[package]
name = "spy-cli"
version = "0.1.0"
edition = "2024"
authors = ["robotframework-PlatynUI Contributors"]
description = "Command line spy tool for inspecting UI trees"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
