[package]
name = "platynui-spy-cli"
version = "0.1.0"
edition = "2021"
authors = ["PlatynUI Contributors"]
description = "Command line UI tree inspector for PlatynUI"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
platynui-spy-core = { path = "../platynui-spy-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
