[package]
name = "platynui-spy-core"
version = "0.1.0"
edition = "2021"
authors = ["PlatynUI Contributors"]
description = "Shared core logic for the PlatynUI spy tooling"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.10"
