[package]
name = "platynui-spy-py"
version = "0.1.0"
edition = "2021"
authors = ["PlatynUI Contributors"]
description = "Python bindings for the PlatynUI spy core"
license = "Apache-2.0"

[package.metadata.maturin]
name = "platynui-spy"

[lib]
name = "platynui_spy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-tests = []

[dependencies]
platynui-spy-core = { path = "../platynui-spy-core", version = "0.1.0" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config = "0.21"
